--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,14 @@ jobs:
     uses: bahmutov/cypress-workflows/.github/workflows/standard.yml@v1
     with:
       start: npm start
-      command: npx cypress run
+      command: npx cypress run --record
+    secrets:
+      recordKey: ${{ secrets.CYPRESS_RECORD_KEY }}
 
   component:
     # https://github.com/bahmutov/cypress-workflows
     uses: bahmutov/cypress-workflows/.github/workflows/standard.yml@v1
     with:
-      command: npx cypress run --component
+      command: npx cypress run --component --record
+    secrets:
+      recordKey: ${{ secrets.CYPRESS_RECORD_KEY }}
