--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,3 +13,10 @@ jobs:
         with:
           start: npm start
           wait-on: 'http://localhost:3000'
+
+      - name: Run Component tests 🧪
+        uses: cypress-io/github-action@v4
+        with:
+          # we have already installed everything
+          install: false
+          component: true
