--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "start": "react-scripts start",
+    "start": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "dev": "start-test 3000 cy:open",
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@cypress/instrument-cra": "^1.4.0",
     "cypress": "10.1.0",
     "prettier": "2.5.1",
     "start-server-and-test": "1.14.0"
