--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@bahmutov/cypress-code-coverage": "^1.2.0",
     "@cypress/instrument-cra": "^1.4.0",
     "cypress": "10.1.0",
     "prettier": "2.5.1",
