--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dev": "start-test 3000 cy:open",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "test": "start-test 3000 cy:run"
+    "test": "start-test 3000 cy:run",
+    "e2e": "cypress open --e2e --browser electron",
+    "comp": "cypress open --component --browser electron"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,7 +41,7 @@
   "devDependencies": {
     "@bahmutov/cypress-code-coverage": "^1.3.1",
     "@cypress/instrument-cra": "^1.4.0",
-    "cypress": "10.1.0",
+    "cypress": "10.2.0",
     "prettier": "2.5.1",
     "start-server-and-test": "1.14.0"
   }
