--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "start": "react-scripts -r @cypress/instrument-cra start",
+    "start": "react-scripts start",
+    "start:covered": "react-scripts -r @cypress/instrument-cra start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "dev": "start-test 3000 cy:open",
